# a_pinyin-data

./: .gitmodules  Makefile  README.md
.github/workflows/: ci.yml
apd/: Cargo.toml
apd/src/: lib.rs  main.rs
apd/src/cli/: mod.rs
apd/src/db/: mod.rs
apd/src/test/: mod.rs
apd/tests/: cli.rs
data1/: .gitignore  README.md
data2/: README.md
data2/v1/: README.md
data2/v1/char/: README.md  d_1.txt  d_2.txt  extract.py
data2/v1/dict/: README.md  d_1.txt  d_10.txt  d_11.txt  d_12.txt  d_13.txt  d_14.txt  d_15.txt  d_16.txt  d_17.txt  d_18.txt  d_19.txt  d_2.txt  d_20.txt  d_21.txt  d_22.txt  d_23.txt  d_24.txt  d_25.txt  d_26.txt  d_27.txt  d_28.txt  d_29.txt  d_3.txt  d_30.txt  d_4.txt  d_5.txt  d_6.txt  d_7.txt  d_8.txt  d_9.txt  extract.py  symbol2.txt
data2/v1/raw/: README.md  char_count.json  core_freq.json  core_symbol2.json
data2/v1/raw/char_count/: char_count_ascii.json  char_count_chinese.json  char_count_other.json  count_to_freq.csv  count_to_freq.json  freq_to_char_chinese.json
data2/v1/raw/correct_pinyin/: correct_pinyin_2.json
data2/v1/raw/pinyin_cut/: pinyin_freq.json
