[package]
name = "apd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.53"
log = "^0.4.14"
env_logger = "^0.9.0"
serde_json = "^1.0.79"

[target.'cfg(not(target_family = "wasm"))'.dependencies.rusqlite]
version = "^0.26.3"
features = ["bundled"]

# wasm32-wasi
[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies.rusqlite_wasi]
git = "https://github.com/fm-elpac/rusqlite"
branch = "fix-wasi"
features = ["bundled", "wasm32-wasi-vfs"]

[dev-dependencies]
assert_cmd = "^2.0.4"
assert_fs = "^1.0.7"
predicates = "^2.1.1"
